<resources>
    <string name="app_name">PhoenixPlayer2</string>


    <!--Main Page-->
    <string name="connected">Connected</string>
    <string name="add_portal">Add Portal</string>
    <string name="portals">LIVE PORTALS</string>


    <!--Edit Page-->
    <string name="enter_your_name">Enter your portal name</string>
    <string name="enter_your_url">Enter your portal url</string>
    <string name="require_login">Login required?</string>
    <string name="enter_user_id">Enter your ID</string>
    <string name="enter_user_password">Enter your password</string>

    <string name="epg_mode">EPG Mode</string>
    <string name="epg_offset">EPG Offset</string>
    <string name="group_channel_numbering">Group Channel Numbering</string>
    <string name="mac_type">MAC Type</string>

    <!--Connect Portal-->
    <string name="quick_insert">Quick Insert</string>
    <string name="action_connect">Connect</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="loading">Loading…</string>
    <string name="start_download">Downloading Data…</string>

    <!--Tv-->
    <string name="no_information">No Information</string>
    <string name="banner_record">Record</string>
    <string name="banner_fav">Favorite</string>
    <string name="banner_lock">Lock</string>
    <string name="banner_av">Audio/Video</string>


    <string name="parental_title">Parental Password</string>
    <string name="parental_hint">PASSWORD</string>
    <string name="parental_positive">Continue</string>
    <string name="parental_negative">Close</string>


    <!--Menu-->
    <string name="live_tv">Live TV</string>
    <string name="vod">VOD</string>
    <string name="tv_series">TV Series</string>
    <string name="recordings">Recordings</string>
    <string name="schedules">Schedule</string>
    <string name="portal">Portal</string>
    <string name="setting">Settings</string>
    <string name="exit_text_1">Exit</string>
    <string name="exit_text_2">Are you sure you want to exit?</string>

    <!--VOD-->
    <string name="tmdb_server">"https://api.themoviedb.org/3/"</string>


    <!--Settings-->
    <string name="settings_portal_information">Portal information</string>
    <string name="settings_box_information">Box information</string>


</resources>