<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill"
        >
        <EditText
            android:id = "@+id/portal_name_input"
            style="@style/Style.EditPortal.EditText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint = "@string/enter_your_name"
            android:layout_marginTop="40dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/portal_url_input"
            style="@style/Style.EditPortal.EditText"
            app:layout_constraintTop_toBottomOf="@id/portal_name_input"
            app:layout_constraintStart_toStartOf="@id/portal_name_input"
            android:hint="@string/enter_your_url"
            android:inputType="textUri"
            android:layout_marginTop="10dp"

            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop ="10dp"
            app:layout_constraintTop_toBottomOf="@id/portal_url_input"
            app:layout_constraintStart_toStartOf="@id/portal_url_input"
            android:text="@string/require_login"
            android:textColor="#B3FFFFFF"
            />
        <EditText
            android:id="@+id/user_name"
            style="@style/Style.EditPortal.EditText"
            android:hint="@string/enter_user_id"
            app:layout_constraintStart_toStartOf="@id/checkBox"
            app:layout_constraintTop_toBottomOf="@id/checkBox"
            android:layout_marginTop="25dp"
            android:inputType="text"
            android:visibility="gone"
            />

        <EditText
            android:id="@+id/user_pw"
            style="@style/Style.EditPortal.EditText"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_user_password"
            app:layout_constraintStart_toStartOf="@id/user_name"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            android:visibility="gone"
            android:inputType="textPassword"
            />
        <Spinner
            style="@style/Style.EditPortal.Spinner"
            android:prompt = "@string/epg_mode"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="@id/checkBox"
            app:layout_constraintTop_toBottomOf="@id/user_pw"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>