<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/action_connect"
        style="@style/Style.FullScreen.Action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/action_edit"
        android:layout_marginBottom="50dp"
        android:text="@string/action_connect"
        />
    <TextView
        android:id="@+id/action_edit"
        style="@style/Style.FullScreen.Action"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/action_edit"
        />
    <TextView
        android:id="@+id/action_delete"
        style="@style/Style.FullScreen.Action"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_edit"
        android:text="@string/action_delete"
        />
</androidx.constraintlayout.widget.ConstraintLayout>